# trachhub

./: .gitignore  CONSTANTS.py  README.md  app.py  bt_check.py  calibrate.py  diff.csv  events.db  logger.py  main.py  package-lock.json  package.json  plot.py  populate.py  pyproject.toml  requirements.txt  setup.md  setup.sh  trachsense_emulator.py  websocket.py  ws_check.py
backend/src/: db.py
backend/src/api/: bluetooth.py
backend/src/communication/: websocket.py
backend/src/data_processing/: analyzer.py  edb.py
backend/src/events/: events.py
backend/src/models/: events.py
services/: bluetooth.py  ws.py
src/: App.tsx  ui.tsx
static/css/: style.css
templates/: index.html
